# ask-llm

./: .gitignore  README.md  askllm_hf.py  fineweb_hf.py  fineweb_hf_eval.py  fineweb_hf_gemma.py  fineweb_hf_llama.py  launch_annotation.sh  pyproject.toml  requirements.txt
container/: tensorrt.def
scripts/: convert_to_tensorrt.sh  download_culturax.py  download_model_checkpoint.py  download_models.sh
scripts/evaluation/: askllm_hf_eval.py  create_eval_data.py  launch_eval.sh  upload_hf_eval.py
scripts/outlines/huggingface/: inference_to_json.py
scripts/utils/: launch_parse_fineweb_json.sh  parse_fineweb_json.py
src/ask_llm/: prompt.py  prompt_texts.py  text.py
